# py-vowpal-wabbit-next

./: .gitignore  .gitmodules  .readthedocs.yaml  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  environment.yml  generate_types.sh  pyproject.toml  requirements-dev.txt  setup.py  vcpkg.json
.github/workflows/: check_pr_title.yml  check_typestubs.yml  format.yml  lint.yml  pip.yml  pip.yml.disabled  wheels.yml
benchmarks/: benchmarks.sh  cache_create.py  cli_runner.py  plot.py  pyvw_comparison.py  readme.md
docs/: environment.yml
docs/source/: conf.py  contextual_bandit_content_personalization.ipynb  index.rst  reference.rst  vw_versions.md
docs/source/how_to_guides/: cache_format.ipynb  cb_estimators.ipynb  dataset_readers.ipynb  example.dsjson  example.txt  example_cb.txt  inspect_model_weights.ipynb  save_load_models.ipynb  using_debug_tree.ipynb
docs/source/reference/: vowpal_wabbit_next.learner.rst  vowpalwabbit_next.learner.rst
docs/source/tutorials/: contextual_bandit_content_personalization.ipynb
src/: main.cpp
src/cpp/: debug_reduction.cc  debug_reduction.h  label.cc  label.h  main.cpp  prediction.cc  prediction.h
src/vowpal_wabbit_next/: __init__.py  _core.pyi  cache_format.py  cli_driver.py  delta.py  dsjson_format.py  example.py  json_format.py  labels.py  prediction_type.py  text_format.py  workspace.py
src/vowpal_wabbit_next/learner/: learner_base.py
src/vowpalwabbit_next/: __init__.py  _core.pyi
src/vowpalwabbit_next/learner/: __init__.py  learner_base.py
tests/: test_basic.py  test_cache.py  test_cli.py  test_debug.py  test_delta.py  test_dsjson_format_reader.py  test_example.py  test_hash.py  test_json_format_reader.py  test_labels.py  test_learn.py  test_logger.py  test_metrics.py  test_serialization.py  test_text_format_reader.py
