cmake_minimum_required(VERSION 3.15...3.22)

set(CMAKE_EXPORT_COMPILE_COMMANDS On)
project(vowpalwabbit_next VERSION "0.0.1")

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

add_subdirectory(ext_libs/pybind11)

SET(VW_BUILD_VW_C_WRAPPER OFF CACHE BOOL "" FORCE)
SET(FMT_SYS_DEP ON CACHE BOOL "" FORCE)
SET(RAPIDJSON_SYS_DEP ON CACHE BOOL "" FORCE)
SET(SPDLOG_SYS_DEP ON CACHE BOOL "" FORCE)
SET(VW_BOOST_MATH_SYS_DEP ON CACHE BOOL "" FORCE)
SET(VW_GTEST_SYS_DEP ON CACHE BOOL "" FORCE)
SET(VW_ZLIB_SYS_DEP ON CACHE BOOL "" FORCE)
SET(BUILD_TESTING OFF CACHE BOOL "" FORCE)
add_subdirectory(ext_libs/vowpal_wabbit EXCLUDE_FROM_ALL)

pybind11_add_module(_core MODULE src/main.cpp)
target_compile_definitions(_core PRIVATE VERSION_INFO=${PROJECT_VERSION})
target_link_libraries(_core PRIVATE vw_core)
install(TARGETS _core DESTINATION .)
