[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "ninja",
    "cmake>=3.12",
    "scikit-build>=0.15.0",
]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"

[tool.cibuildwheel]
test-command = "pytest {project}/tests"
test-extras = ["test"]
test-skip = ["*universal2:arm64"]
# Skip 32-bit builds
skip = ["*-win32", "*-manylinux_i686"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]