[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "ninja",
    "cmake>=3.12",
    "scikit-build>=0.15.0",
]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"

[tool.black]
extend-exclude = "_core.pyi"

[tool.cibuildwheel]
test-requires = "pytest"
test-command = "pytest {project}/tests"
test-extras = ["test"]
test-skip = ["*-macosx_arm64"]
# Skip 32-bit builds and musl
skip = ["*-win32", "*_i686", "*-musllinux_*"]
build-verbosity = 3

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]

[tool.mypy]
files = "src/**/*.py"
python_version = "3.8"
strict = true
show_error_codes = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true

[[tool.mypy.overrides]]
module = "vowpal_wabbit_next._core"
ignore_errors = true

[tool.pydocstyle]
convention = "google"
# Choosing to ignore module level docs, class level docs (document __init__
# instead), magic functions (__enter__), ignore blank line requirement between
# summary and content
add_ignore = "D100,D101,D104,D105,D205"
